# CLAW

./: .gitignore  Makefile  README.md  pyproject.toml
claw/: __init__.py  config.py  logging.py  types.py
claw/cli/: __init__.py  main.py
claw/interfaces/: __init__.py  domain.py  meta.py  neural.py  symbolic.py
claw/meta/: __init__.py  controller.py  policy.py  tracing.py
claw/neural/: __init__.py  hf_llm.py  prompting.py  schema.py
claw/symbolic/: __init__.py
claw/symbolic/diplomacy_adapter/: __init__.py  adapter.py  engine.py  orders.py  score.py  simulate.py
claw/symbolic/planning/: __init__.py  pddl.py  prolog.py  search.py
examples/: diplomacy_quickstart.md  run_full_game_stub.py  run_one_turn.py
tests/: __init__.py  test_diplomacy_adapter.py  test_end_to_end.py  test_interfaces.py  test_llm_schema.py  test_meta_controller.py
