[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claw"
version = "0.1.0"
description = "Domain-general meta-cognitive neuro-symbolic planning framework"
authors = [
    {name = "CLAW Team", email = "claw@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "structlog>=23.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "diplomacy>=0.1.0",
]

[project.optional-dependencies]
llama = [
    "llama-cpp-python>=0.2.0",
]
quantization = [
    "bitsandbytes>=0.41.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
claw = "claw.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["claw*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=claw --cov-report=term-missing"
